# ML-LookingGlass

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  ComputeShader.hlsl  CopyShader.ps1  DevicesAndShaders.c  DevicesAndShaders.h  DevicesAndShaderscpp.h  HwndsAndWindowManagement.h  LookingGlass.cpp  LookingGlass.h  Onnx.h  README.md  StandAloneCapture.cpp  StandAloneCapture.h  cudaFunctions.cu  cudaFunctions.cuh  globals.h  pch.h  rtdetr.h
LookingGlass/: BuildCuda.ps1  CMakeLists.txt  ComputeShader.hlsl  DevicesAndShaders.h  DevicesAndShaderscpp.h  HwndsAndWindowManagement.h  LookingGlass.cpp  LookingGlass.h  SetStaticBinaryResources.ps1  cudaFunctions.cu  cudaFunctions.cuh  globals.h  orbd.cu  orbd.h  pch.h  rtdetr.h
LookingGlass/Dependency-Generator/: GetDeps.ps1  deps.py  launch.cmd
